[feat] 영화예매 영화선택

--- a/ios/TheaterReservation/MovieReservation/TheaterRViewController.xib
+++ b/ios/TheaterReservation/MovieReservation/TheaterRViewController.xib
@@ -10,8 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TheaterRViewController" customModule="ios" customModuleProvider="target">
             <connections>
-                <outlet property="bigCtiyPicker" destination="XSv-R5-1uW" id="hKe-5G-9hG"/>
-                <outlet property="smallCityPicker" destination="quo-7i-vkH" id="KZb-aM-RCF"/>
+                <outlet property="bigCity" destination="vLr-SI-AUR" id="wG9-RS-hAl"/>
+                <outlet property="selectBtn" destination="v5N-Kn-6Tf" id="vJn-8Q-IJb"/>
+                <outlet property="selectCV" destination="GhS-ES-p9i" id="svL-x8-nuK"/>
+                <outlet property="selectzoneView" destination="R3d-JX-5xD" id="AZ5-8G-08h"/>
+                <outlet property="smallCity" destination="qWc-DB-6VO" id="jxs-CN-dGU"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -25,7 +28,7 @@
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v5N-Kn-6Tf">
-                            <rect key="frame" x="0.0" y="599" width="414" height="68"/>
+                            <rect key="frame" x="0.0" y="530" width="414" height="68"/>
                             <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="68" id="6Di-YJ-Fvi"/>
@@ -35,36 +38,56 @@
                             <state key="normal" title="극장선택">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
+                            <connections>
+                                <action selector="selectTheater:" destination="-1" eventType="touchUpInside" id="LbU-6P-jaI"/>
+                            </connections>
                         </button>
-                        <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VgG-WJ-lj0">
-                            <rect key="frame" x="0.0" y="69" width="414" height="530"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="VgG-WJ-lj0">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="530"/>
                             <subviews>
-                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XSv-R5-1uW" userLabel="regionBig">
-                                    <rect key="frame" x="0.0" y="0.0" width="124" height="530"/>
-                                    <connections>
-                                        <outlet property="delegate" destination="aYg-oR-ate" id="bhP-CR-o7W"/>
-                                    </connections>
-                                </pickerView>
-                                <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="quo-7i-vkH" userLabel="regionDetail">
-                                    <rect key="frame" x="124" y="0.0" width="290" height="530"/>
-                                    <connections>
-                                        <outlet property="delegate" destination="aYg-oR-ate" id="c8j-B6-mfW"/>
-                                    </connections>
-                                </pickerView>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vLr-SI-AUR">
+                                    <rect key="frame" x="0.0" y="0.0" width="135" height="530"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                </tableView>
+                                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="60" estimatedRowHeight="80" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="qWc-DB-6VO">
+                                    <rect key="frame" x="135" y="0.0" width="279" height="530"/>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                </tableView>
                             </subviews>
                             <constraints>
-                                <constraint firstItem="XSv-R5-1uW" firstAttribute="width" secondItem="VgG-WJ-lj0" secondAttribute="width" multiplier="0.3" id="9We-ja-M3W"/>
                                 <constraint firstAttribute="width" secondItem="VgG-WJ-lj0" secondAttribute="height" multiplier="207:265" id="bV0-VJ-k0C"/>
                                 <constraint firstAttribute="height" constant="530" id="e01-Ts-uXS"/>
                             </constraints>
                         </stackView>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="R3d-JX-5xD">
+                            <rect key="frame" x="0.0" y="466" width="414" height="68"/>
+                            <subviews>
+                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="GhS-ES-p9i" userLabel="Selected">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="68"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="nH5-2t-d19">
+                                        <size key="itemSize" width="128" height="128"/>
+                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    </collectionViewFlowLayout>
+                                </collectionView>
+                            </subviews>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="68" id="M3W-Jl-67e"/>
+                            </constraints>
+                        </view>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstItem="VgG-WJ-lj0" firstAttribute="top" secondItem="oEW-Hh-ru8" secondAttribute="top" id="0ia-BR-hHH"/>
                         <constraint firstItem="v5N-Kn-6Tf" firstAttribute="trailing" secondItem="oEW-Hh-ru8" secondAttribute="trailing" id="2x0-qS-36s"/>
                         <constraint firstItem="VgG-WJ-lj0" firstAttribute="trailing" secondItem="oEW-Hh-ru8" secondAttribute="trailing" id="G21-s3-O1p"/>
+                        <constraint firstItem="R3d-JX-5xD" firstAttribute="leading" secondItem="oEW-Hh-ru8" secondAttribute="leading" id="JYJ-Fw-JoA"/>
                         <constraint firstItem="v5N-Kn-6Tf" firstAttribute="leading" secondItem="oEW-Hh-ru8" secondAttribute="leading" id="RGw-J3-lMz"/>
-                        <constraint firstItem="oEW-Hh-ru8" firstAttribute="bottom" secondItem="v5N-Kn-6Tf" secondAttribute="bottom" constant="151" id="RYW-iX-mcM"/>
+                        <constraint firstItem="R3d-JX-5xD" firstAttribute="trailing" secondItem="oEW-Hh-ru8" secondAttribute="trailing" id="V93-gh-8Rz"/>
+                        <constraint firstItem="oEW-Hh-ru8" firstAttribute="bottom" secondItem="R3d-JX-5xD" secondAttribute="bottom" constant="284" id="bTH-5v-nQD"/>
                         <constraint firstItem="VgG-WJ-lj0" firstAttribute="leading" secondItem="oEW-Hh-ru8" secondAttribute="leading" id="dOs-8G-U01"/>
                         <constraint firstItem="v5N-Kn-6Tf" firstAttribute="top" secondItem="VgG-WJ-lj0" secondAttribute="bottom" id="mRY-85-Tn2"/>
                     </constraints>
