--- a/ios/TheaterReservation/MovieReservation/TableViewCell/TheaterTableViewCell.xib
+++ b/ios/TheaterReservation/MovieReservation/TableViewCell/TheaterTableViewCell.xib
@@ -36,6 +36,7 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="locationLabel" destination="FVq-OX-YUu" id="eBu-NZ-Maq"/>
+                <outlet property="myCell" destination="H2p-sc-9uM" id="MEG-2R-Nsf"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="69.642857142857139"/>
         </tableViewCell>
