--- a/ios/TheaterReservation/MovieReservation/CollectionViewCell/SelectedCollectionViewCell.xib
+++ b/ios/TheaterReservation/MovieReservation/CollectionViewCell/SelectedCollectionViewCell.xib
@@ -11,17 +11,16 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SelectedCollectionViewCell" id="gTV-IL-0wX" customClass="SelectedCollectionViewCell" customModule="ios" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="100" height="48"/>
+            <rect key="frame" x="0.0" y="0.0" width="140" height="48"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="100" height="48"/>
+                <rect key="frame" x="0.0" y="0.0" width="140" height="48"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ESn-C9-N97">
-                        <rect key="frame" x="32" y="6.5" width="36" height="35"/>
+                        <rect key="frame" x="52" y="5" width="36" height="38"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="33" id="HkQ-lA-VFS"/>
-                            <constraint firstAttribute="height" constant="35" id="qTH-oW-YXh"/>
+                            <constraint firstAttribute="height" constant="38" id="qTH-oW-YXh"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
                         <state key="normal" title="강남 X">
@@ -38,7 +37,7 @@
             <connections>
                 <outlet property="theaterName" destination="ESn-C9-N97" id="4Nd-cB-hQf"/>
             </connections>
-            <point key="canvasLocation" x="226" y="72"/>
+            <point key="canvasLocation" x="224.63768115942031" y="71.651785714285708"/>
         </collectionViewCell>
     </objects>
 </document>
